# minicli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: package.yaml
src/minicli/: __init__.py  cli.py  hdfutils.py
